search and pagination now comes from the API side

--- a/src/app/single-player/single-player.component.html
+++ b/src/app/single-player/single-player.component.html
@@ -2,16 +2,16 @@
     <h2>{{player.first_name}} {{player.last_name}}</h2>
     <ul>
         <li>ID: {{player.id}}</li>
-        <li>Position: {{player.position}}</li>
-        <li *ngIf="player.height_ft">Height: {{player.height_ft}}'{{player.height_in}}"</li>
-        <li *ngIf="player.weight">Weight: {{player.weight}}lbs</li>
+        <li *ngIf="player.position">Position: {{player.position}}</li>
+        <li *ngIf="player.height_feet">Height: {{player.height_feet}}'{{player.height_inches}}"</li>
+        <li *ngIf="player.weight_pounds">Weight: {{player.weight_pounds}}lbs</li>
         <li>Team Details:<ul>
-             <li>Name: {{player.team_name}}</li>
-             <li>Abbreviation: {{player.team_abbr}}</li>
-             <li>City: {{player.team_city}}</li>
-             <li>Conference: {{player.team_conf}}</li>
-             <li>Division: {{player.team_div}}</li>
-             <li>Full Name: {{player.team_full_name}}</li>
+             <li>Name: {{player.team.name}}</li>
+             <li>Abbreviation: {{player.team.abbreviation}}</li>
+             <li>City: {{player.team.city}}</li>
+             <li>Conference: {{player.team.conference}}</li>
+             <li>Division: {{player.team.division}}</li>
+             <li>Full Name: {{player.team.full_name}}</li>
         </ul></li>
     </ul>
 </div>
