--- a/src/app/player-table/player-table.component.html
+++ b/src/app/player-table/player-table.component.html
@@ -1,10 +1,19 @@
+
 <mat-form-field>
-<mat-label>Search </mat-label>
-<input matInput (keyup)="applyFilter($event)" placeholder="Search here!">
+    <mat-label>Search</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Search here!">
 </mat-form-field>
 
 <div class="mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource" matSort>
+
+    <div class="example-loading-shade" *ngIf="isLoadingResults || isRateLimitReached">
+        <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
+        <div class="example-rate-limit-reached" *ngIf="isRateLimitReached">
+            balldontlie API rate limit has been reached
+        </div>
+    </div>
+
+    <table mat-table [dataSource]="players" matSort>
 
     <ng-container matColumnDef="first_name">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> First Name </th>
@@ -28,12 +37,12 @@
 
     <ng-container matColumnDef="height">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Height </th>
-    <td mat-cell *matCellDef="let row"><div *ngIf="row.height_ft"> {{row.height_ft}}'{{row.height_in}}" </div></td>
+    <td mat-cell *matCellDef="let row"><div *ngIf="row.height_feet"> {{row.height_feet}}'{{row.height_inches}}" </div></td>
     </ng-container> 
 
     <ng-container matColumnDef="weight">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Weight </th>
-    <td mat-cell *matCellDef="let row"><div *ngIf="row.height_ft"> {{row.weight}}lbs </div></td>
+    <td mat-cell *matCellDef="let row"><div *ngIf="row.weight_pounds"> {{row.weight_pounds}}lbs </div></td>
     </ng-container> 
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -41,9 +50,6 @@
     </tr>
     </table>
 
-    <mat-paginator [length]="100"
-                [pageSize]="10"
-                [pageSizeOptions]="[5, 10, 25, 100]">
-    </mat-paginator>
+    <mat-paginator #paginator [pageSize]="10" [showFirstLastButtons]="true" [length]="resultsLength"></mat-paginator>
 
 </div>
