--- a/src/app/single-player/single-player.component.html
+++ b/src/app/single-player/single-player.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="player">
+<div fxLayout='column' *ngIf="player">
     <h2>{{player.first_name}} {{player.last_name}}</h2>
     <ul>
         <li>ID: {{player.id}}</li>
