--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,21 +1,13 @@
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
 
 h1 {
-    color: #369;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 250%;
+  color: #3F51B5; 
 }
-h2, h3 {
-  color: #444;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: lighter;
-}
+
 body {
   margin: 2em;
 }
-* {
-  font-family: Arial, Helvetica, sans-serif;
-}
+
 .basic-container {
   padding: 30px;
 }
